feature(all): 完成路由货主端配置

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,15 @@
 {
+    "root": true,
     "env": {
         "browser": true,
-        "es2021": true
+        "node": true
     },
     "extends": [
         "plugin:vue/essential",
         "standard"
     ],
     "parserOptions": {
+        "parser": "@babel/eslint-parser",
         "ecmaVersion": 12,
         "sourceType": "module"
     },
