--- a/package.json
+++ b/package.json
@@ -35,24 +35,8 @@
     "prettier": "^2.4.1",
     "vue-template-compiler": "^2.6.14"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended",
-      "plugin:prettier/recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
+    "Android >= 4.0",
+    "iOS >= 8"
   ]
 }
