--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ant-design-vue": "^3.2.9",
     "core-js": "^3.8.3",
     "moment": "^2.29.3",
     "vant": "^2.12.48",
